--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
   <button id="playAudio" class="play-button">🔊 Activar radio</button>
 
   <script src="script.js"></script>
+<!-- Script del reproductor Alloncast (opcional) -->
+  <script src="https://yoda.alonhosting.com/system/player.js" type="text/javascript" language="javascript"></script>
+  
 </body>
 </html>
