--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
 !-- Reproductor de radio oculto -->
-<audio id="radio" autoplay loop style="display: none;">
-  <source src="http://142.171.10.66:8092/stream" type="audio/mp3">
-  Tu navegador no soporta audio en HTML5.
-</audio>
+<audio autoplay="" controls="" hidden=""><source src="http://142.171.10.66:8092/stream" type="audio/mp3" /> unsupported !!</audio>
   <div class="carousel" id="carousel"></div>
 
    <!-- Botón para activar audio si no arranca -->
