Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-!-- Reproductor de radio oculto -->
+<!-- Reproductor de radio oculto -->
 <audio autoplay="" controls="" hidden=""><source src="http://142.171.10.66:8092/stream" type="audio/mp3" /> unsupported !!</audio>
   <div class="carousel" id="carousel"></div>
 
