--- a/index.html
+++ b/index.html
@@ -1,78 +1,56 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carrusel + Radio</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: #000;
-      color: #fff;
-      font-family: Arial, sans-serif;
-    }
-    .carrusel-container {
-      position: relative;
-      width: 100%;
-      height: 70vh;
-      overflow: hidden;
-    }
-    .slide {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: none;
-      object-fit: cover;
-    }
-    .slide.active {
-      display: block;
-    }
-    video.slide {
-      object-fit: cover;
-    }
-    .radio-player {
-      text-align: center;
-      padding: 20px;
-    }
-    audio {
-      width: 300px;
-      max-width: 90%;
-    }
-  </style>
+<html>
+<head><meta charset="utf-8">
+	<link href="img/favicon.ico" rel="shortcut icon" />
+	<link href="img/favicon.ico" rel="apple-itouch-icon" /><meta http-equiv= "refresh" content="7400"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>&quot;El CLON musica&quot;</title>
+	<meta name="description" content=""><meta name="viewport" content="width=device-width">
+	<link href="css/bootstrap.min.css" rel="stylesheet" />
+	<style type="text/css">body {
+                padding-top: 0px;
+                padding-bottom: 0px;
+            }
+	</style>
+	<link href="css/bootstrap-responsive.min.css" rel="stylesheet" />
+	<link href="css/main.css" rel="stylesheet" /><script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
+<p>&nbsp;
+<audio autoplay="" controls="" hidden=""><source src="http://142.171.10.66:8092/stream" type="audio/mp3" /> unsupported !!</audio>
+<!--<div class="cc_player" data-username="elclon" data-skin="foobar" data-autoplay="1" hidden="1" >Cargando ...</div>--></p>
 
-  <!-- Carrusel -->
-  <div class="carrusel-container">
-    <img class="slide active" src="https://via.placeholder.com/1280x720/0000FF/FFFFFF?text=Imagen+1" alt="Imagen 1">
-    <img class="slide" src="https://via.placeholder.com/1280x720/FF0000/FFFFFF?text=Imagen+2" alt="Imagen 2">
-    <video class="slide" autoplay muted loop>
-      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      Tu navegador no soporta video.
-    </video>
-  </div>
+<div class="foto"><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script src="js/vendor/bootstrap.min.js"></script><script src="js/jquery.backstretch.min.js"></script><script>
+                jQuery.backstretch([
+                    "img/LOGO -EL CLON TAN URUGUAYO COMO VOS .png"
+                    
 
-  <!-- Reproductor de radio -->
-  <div class="radio-player">
-    <h2>🎧 El Clon Radio</h2>
-    <audio controls autoplay>
-      <source src="http://142.44.210.78:7080/;" type="audio/mpeg">
-      Tu navegador no soporta audio HTML5.
-    </audio>
-  </div>
+, "img/Inst - 01 p01.png"
+, "img/Inst - 01 p02.png"
+, "img/Inst - 01 p03.png"
+, "img/Inst - 01 p04.png"
+, "img/Inst - 02 p01.png"
+, "img/Inst - 02 p02.png"
+, "img/Inst - 02 p03.png"
+, "img/Inst - 02 p04.png"
+, "img/Inst - 03 p01.png"
+, "img/Inst - 03 p02.png"
+, "img/Inst - 03 p03.png"
+, "img/LOGO - REDES EL CLON REDES FONDO ROJO .png"
+, "img/Inst - 03 p04.png"
+, "img/Inst - 04 p01.png"
+, "img/Inst - 04 p02.png"
+, "img/Inst - 04 p03.png"
+, "img/Inst - 04 p04.png"
+, "img/Inst - 05 p01.png"
+, "img/Inst - 05 p02.png"
+, "img/Inst - 05 p03.png"
+, "img/Inst - 05 p04.png"
 
-  <script>
-    const slides = document.querySelectorAll('.slide');
-    let current = 0;
 
-    function nextSlide() {
-      slides[current].classList.remove('active');
-      current = (current + 1) % slides.length;
-      slides[current].classList.add('active');
-    }
 
-    setInterval(nextSlide, 6000); // Cambia cada 6 segundos
-  </script>
 
-</body>
-</html>
+
+
+                ], {duration: 10000, fade: 0100}
+                );
+            </script></div>
+<script language="javascript" type="text/javascript" src="https://yoda.alonhosting.com/system/player.js"></script></body>
