--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <!-- Elemento de audio oculto -->
   <audio id="radioPlayer" preload="none">
-    <source src="http://142.171.10.66:8092/stream" type="audio/mpeg">
+    <source src="https://142.171.10.66:8092/stream" type="audio/mpeg">
     Tu navegador no soporta audio en línea.
   </audio>
 
